tests/run/error_if_int_condition.out
tests/run/error_if_int_condition.em:4:5: error: 'if' condition must be a bool
